# NCIHost

./: .editorconfig  .gitignore  LICENSE  README.md  build.gradle  common.gradle  gradle.properties  settings.gradle
.github/workflows/: ci.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/libbasehalpatch/: CMakeLists.txt
app/src/main/cpp/libbasehalpatch/hook/: hook_proc_symbols.c  hook_proc_symbols.h  hook_sym_struct.h  intercept_callbacks.h
app/src/main/cpp/libbasehalpatch/ipc/: daemon_ipc_struct.h  inject_io_init.cpp  inject_io_init.h  ipc_io_event.cpp  ipc_io_event.h  ipc_looper.cpp  ipc_looper.h  request_handler.h
app/src/main/cpp/libnciclient/: CMakeLists.txt  IpcConnection.cpp  IpcConnection.h  IpcConnector.cpp  IpcConnector.h  NciClientImpl.cpp  NciClientImpl.h  NciHostDaemonProxy.cpp  NciHostDaemonProxy.h  ipc_handle_jni.cpp  ipc_handle_jni.h  version.c
app/src/main/cpp/libnxphalpatch/: CMakeLists.txt  asm_utils.c  daemon_ipc.cpp  daemon_ipc.h  daemon_ipc_struct.h  hook_proc_symbols.c  hook_proc_symbols.cpp  hook_proc_symbols.h  inject_entry.c  inject_io_init.cpp  inject_io_init.h  intercept_callbacks.h  io_procedure.cpp  io_procedure.h  tracer_call.c  tracer_call.h  tracer_call_asm.c  tracer_call_asm.h
app/src/main/cpp/libnxphalpatch/ipc/: ipc_request_handler.cpp  ipc_requests.h
app/src/main/cpp/libqtiesepmpatch/: CMakeLists.txt  inject_entry.c
app/src/main/cpp/libqtiesepmpatch/ipc/: ipc_request_handler.cpp  ipc_requests.h
app/src/main/cpp/ncihostd/: CMakeLists.txt  IpcStateController.cpp  IpcStateController.h  LpcRequestDispatcher.cpp  LpcRequestDispatcher.h  NciHostDaemonImpl.cpp  NciHostDaemonImpl.h  common.h  daemon.cpp  daemon.h  startup.c
app/src/main/cpp/ncihostd/elfsym/: ElfView.cpp  ElfView.h  ProcessView.cpp  ProcessView.h
app/src/main/cpp/ncihostd/inject/: Injector.cpp  Injector.h  SysServicePatch.cpp  SysServicePatch.h
app/src/main/cpp/ncihostd/inject/arch/: ptrace_inject_arch.h  ptrace_inject_x86_impl.cpp
app/src/main/cpp/ncihostd/injection/: so_injection.cpp  so_injection.h
app/src/main/cpp/ncihostd/injection/arch/: ptrace_inject_aarch64.cpp  ptrace_inject_aarch64.h  ptrace_inject_amd64.cpp  ptrace_inject_arm_impl.cpp  ptrace_inject_common.cpp  ptrace_inject_common.h  ptrace_inject_utils.cpp  ptrace_inject_utils.h  ptrace_inject_x86_impl.cpp
app/src/main/cpp/ncihostd/ipc/: IpcStateController.cpp  IpcStateController.h
app/src/main/cpp/ncihostd/ipc/logbuffer/: LocalLogBuffer.cpp  LocalLogBuffer.h
app/src/main/cpp/ncihostd/service/: HwServiceStatus.cpp  HwServiceStatus.h  IBaseService.h  ServiceManager.cpp  ServiceManager.h
app/src/main/cpp/ncihostd/service/front/: NciClientProxy.cpp  NciClientProxy.h  NciHostDaemonImpl.cpp  NciHostDaemonImpl.h
app/src/main/cpp/ncihostd/service/hw/: BaseHwHalHandler.cpp  BaseHwHalHandler.h  BaseNfcHalHandler.cpp  BaseNfcHalHandler.h
app/src/main/cpp/ncihostd/service/hw/nxpnci/: NxpHalHandler.cpp  NxpHalHandler.h
app/src/main/cpp/ncihostd/service/hw/qtiesepm/: QtiEsePmHandler.cpp  QtiEsePmHandler.h
app/src/main/cpp/ncihostd/service/xposed/: AndroidNfcService.cpp  AndroidNfcService.h  BaseRemoteAndroidService.cpp  BaseRemoteAndroidService.h
app/src/main/cpp/ncihostd/startup/: common.h  daemon.cpp  daemon.h  startup.c
app/src/main/cpp/rpcprotocol/: ArgList.cpp  ArgList.h  CMakeLists.txt  CachedThreadPool.cpp  ConcurrentHashMap.h  FixedThreadPool.cpp  FixedThreadPool.h  HashMap.h  INciClient.h  INciHostDaemon.cpp  INciHostDaemon.h  IpcProxy.cpp  IpcProxy.h  IpcResult.cpp  IpcResult.h  LpcArgListExtractor.h  LpcResult.cpp  LpcResult.h  RemoteDaemonException.cpp  RemoteDaemonException.h  RemoteException.cpp  RemoteException.h  Rva.h  SharedBuffer.cpp  SharedBuffer.h  SignalHandler.cpp  ThreadPool.cpp  ThreadPool.h  rpc_proc.cpp  rpc_struct.h  rpcprotocol.h  shared_memory.cpp  shared_memory.h
app/src/main/cpp/rpcprotocol/log/: DefaultSessionLogImpl.cpp  DefaultSessionLogImpl.h  Log.h  LogEntryRecord.cpp  LogEntryRecord.h  SessionLog.h
app/src/main/cpp/rpcprotocol/protocol/: ArgList.cpp  ArgList.h  BaseIpcObject.cpp  BaseIpcObject.h  BaseIpcProxy.cpp  BaseIpcProxy.h  IpcProxy.cpp  IpcProxy.h  IpcTransactor.cpp  IpcTransactor.h  LpcArgListExtractor.h  LpcResult.cpp  LpcResult.h  RemoteException.cpp  RemoteException.h  rpc_struct.h
app/src/main/cpp/rpcprotocol/utils/: CachedThreadPool.h  ConcurrentHashMap.h  FileMemMap.cpp  FileMemMap.h  FixedThreadPool.cpp  ProcessUtils.cpp  ProcessUtils.h  SELinux.cpp  SELinux.h  SharedBuffer.cpp  SharedBuffer.h  SignalHandler.h
app/src/main/res/anim/: anim_bottom_sheet_dialog_enter.xml
app/src/main/res/color/: stateful_accent.xml
app/src/main/res/drawable/: bg_dialog_shape_sheet_dialog.xml  bg_ripple_round_rect.xml  ic_baseline_card_24.xml  ic_baseline_stop_32.xml  ic_baseline_swap_horiz_24.xml  ic_launcher_background.xml  ic_ncihost_foreground.xml  ic_outline_handyman_24.xml  mask_round_rect.xml
app/src/main/res/layout/: activity_dashboard.xml  activity_empty_fragment_container.xml  activity_main.xml  activity_sideband_host.xml  activity_splash.xml  app_bar_main.xml  dialog_bsd_hal_operation.xml  dialog_license_notice.xml  dialog_warn_app_risk.xml  empty_layout.xml  frag_warn_app_risk.xml  fragment_card_info.xml  fragment_gallery.xml  fragment_home.xml  fragment_log.xml  fragment_main_card_list.xml  fragment_main_dump.xml  fragment_main_home.xml  fragment_slideshow.xml  gen_mipmap_activity.xml  item_license_notice.xml  item_log_entry.xml  item_main_nci_dump.xml  item_spinner_text.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml  dashboard.xml  menu_activity_main_ui_common.xml  menu_fragment_home.xml  menu_fragment_log.xml  menu_main_fragment_dump.xml  menu_main_fragment_dump_common.xml  menu_main_fragment_dump_live.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/navigation/: mobile_navigation.xml
gradle/wrapper/: gradle-wrapper.properties
(+197 files in other folders)
